--- a/styles/inventario.module.css
+++ b/styles/inventario.module.css
@@ -13,7 +13,8 @@
     border: 1px solid #044;
     transition: all .3s ease-in;
     backdrop-filter: blur(5px);
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     padding: 40px;
     overflow-x: hidden;
@@ -236,5 +237,64 @@
 }
 
 .h1Total{
+    text-align: center;
+}
+
+
+
+/* REPORTES */
+
+.scrollReportes{
+    margin-top: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+    overflow-y: scroll;
+    gap: 70px 0;
+}
+
+.bar{
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    background-color: #fffa;
+    transition: all .2s ease;
+    height: 80%;
+    width: 80%;
+}
+
+.bar:hover{
+    background-color: #fff;
+}
+
+.pie{
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    background-color: #fffa;
+    transition: all .2s ease;
+    height: 80%;
+    width: 80%;
+}
+
+.pie:hover{
+    background-color: #fff;
+}
+
+/* .reportePlanes, .reporteIngresos{
+    width: 45%;
+    height: 45%;   
+} */
+
+.reporteParrafo{
+    width: 85%;
+    display: flex;
+    margin: auto;
     text-align: center;
 }
