--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,7 @@ body {
   background-size: cover;
   min-height: 100vh;
   overflow-y: hidden;
+  color: white !important;
 }
 
 @media (max-width: 768px) {
